--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ICT-YEP Group 1 House Rental Service project",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
